# ai-api-lint

./: .gitignore  CLAUDE.md  LICENSE  README-ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_api_lint/: __init__.py  __main__.py  cli.py  engine.py  formatter.py  loader.py  models.py  report.py  scorer.py
ai_api_lint/fixer/: __init__.py  base.py  engine.py  fixers.py
ai_api_lint/rules/: __init__.py  base.py  description.py  mcp_readiness.py  operation_id.py  parameters.py  path_design.py  request_body.py  response.py
tests/: test_engine.py  test_fixer.py  test_fixer_all.py  test_formatter.py  test_loader.py  test_report.py  test_rules_description.py  test_rules_mcp_readiness.py  test_rules_operation_id.py  test_rules_parameters.py  test_rules_path_design.py  test_rules_request_body.py  test_rules_response.py  test_scorer.py
tests/fixtures/: bad_api.json  good_api.json
