[tool.poetry]
name = "ai-api-lint"
version = "0.1.0"
description = "AI-friendly API linter for OpenAPI specifications"
authors = ["SonAIengine <sonsj97@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_api_lint"}]
keywords = ["openapi", "linter", "ai", "llm", "api", "tool-use", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.urls]
Homepage = "https://github.com/SonAIengine/ai-api-lint"
Repository = "https://github.com/SonAIengine/ai-api-lint"
"Bug Tracker" = "https://github.com/SonAIengine/ai-api-lint/issues"

[tool.poetry.scripts]
ai-api-lint = "ai_api_lint.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyyaml = {version = ">=6.0", optional = true}

[tool.poetry.extras]
yaml = ["pyyaml"]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8"
pytest = ">=7.0"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"ai_api_lint/rules/*.py" = ["N801"]  # AI001_RuleName convention
"ai_api_lint/report.py" = ["E501"]  # HTML template strings
"ai_api_lint/fixer/fixers.py" = ["N801"]  # FixAI042 naming convention

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
